--- a/.gitattributes
+++ b/.gitattributes
@@ -1,10 +1,11 @@
 * text=auto !eol
 action/export_all.php -text
 base/import_all.php -text
-exec/admin_backup.php -text
 exec/admin_restore.php -text
 exec/export_all.php -text
 exec/import_all.php -text
+formulaires/sauvegarder.html -text
+formulaires/sauvegarder.php -text
 inc/export.php -text
 inc/import.php -text
 inc/import_0_0.php -text
@@ -12,4 +13,5 @@ inc/import_1_2.php -text
 inc/import_1_3.php -text
 inc/import_insere.php -text
 /plugin.xml -text
+prive/squelettes/contenu/page-backup.html -text
 prive/themes/spip/images/dump-32.png -text
