--- a/plugin.xml
+++ b/plugin.xml
@@ -8,10 +8,10 @@
 	<description>Export et Import de la base en XML</description>
 	<prefix>dump</prefix>
 	
-	<bouton id='admin_sauvegarder' parent='bando_administration' position='1'>
+	<bouton id='sauvegarder' parent='bando_administration' position='1'>
 		<icone>images/base-backup-16.png</icone>
 		<titre>texte_sauvegarde_base</titre>
-		<url>admin_backup</url>
+		<url>backup</url>
 	</bouton>
 	<bouton id='admin_restaurer' parent='bando_administration' position='2'>
 		<icone>images/base-restore-16.png</icone>
