sauvegarde dans une base sqlite, avec reorganisation complete du code. La sauvegarde partielle n'est pas implementee, mais le noyau est prevu pour prendre un where optionnel pour chaque table qui permet de filtrer la sauvegarde a volontee. Elle peut donc etre personalisee par simple surcharge du formulaire et fonction de filtrage qui produit le where associe.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,11 +1,12 @@
 * text=auto !eol
 action/export_all.php -text
 base/import_all.php -text
+connect/dump.php -text
 exec/admin_restore.php -text
-exec/export_all.php -text
 exec/import_all.php -text
 formulaires/sauvegarder.html -text
 formulaires/sauvegarder.php -text
+inc/dump.php -text
 inc/export.php -text
 inc/import.php -text
 inc/import_0_0.php -text
@@ -14,4 +15,6 @@ inc/import_1_3.php -text
 inc/import_insere.php -text
 /plugin.xml -text
 prive/squelettes/contenu/page-backup.html -text
+prive/squelettes/contenu/page-backup_fin.html -text
+prive/squelettes/contenu/page-backup_fin_fonctions.php -text
 prive/themes/spip/images/dump-32.png -text
