--- a/.gitattributes
+++ b/.gitattributes
@@ -8,6 +8,7 @@ formulaires/sauvegarder.html -text
 formulaires/sauvegarder.php -text
 inc/dump.php -text
 inc/export.php -text
+lang/dump_fr.php -text
 /plugin.xml -text
 prive/squelettes/contenu/page-backup.html -text
 prive/squelettes/contenu/page-backup_fin.html -text
