--- a/plugin.xml
+++ b/plugin.xml
@@ -5,7 +5,7 @@
 	<licence>GPL</licence>
 	<version>1.1.2</version>
 	<etat>stable</etat>
-	<description>Export et Import de la base en XML</description>
+	<description>Sauvegarde de la base en SQLite et restauration</description>
 	<prefix>dump</prefix>
 	
 	<bouton id='sauvegarder' parent='bando_administration' position='1'>
