--- a/plugin.xml
+++ b/plugin.xml
@@ -3,7 +3,7 @@
 	<auteur>Collectif SPIP</auteur>
 	<icon>prive/themes/spip/images/dump-32.png</icon>
 	<licence>GPL</licence>
-	<version>1.2.5</version>
+	<version>1.2.6</version>
 	<etat>stable</etat>
 	<description>Sauvegarde de la base en SQLite et restauration</description>
 	<prefix>dump</prefix>
@@ -16,7 +16,7 @@
 	<bouton id='restaurer' parent='bando_administration' position='2'>
 		<icone>images/base-restore-16.png</icone>
 		<titre>bouton_restaurer_base</titre>
-		<url>restore</url>
+		<url>restaurer</url>
 	</bouton>
 
 	<necessite id="SPIP" version="[2.3.0-dev;)" />
