mise a jour de l'extension dump : - squeletisation de l'affichage des sauvegardes existantes (boucle POUR) - supprimer enctype='multipart/form-data' des form qui n'envoient pas de fichier, pour eviter le post par une iframe inutile ici

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,8 @@ action/restaurer.php -text
 action/sauvegarder.php -text
 base/restaurer.php -text
 connect/dump.php -text
+formulaires/inc-lister-sauvegardes.html -text
+formulaires/inc-lister-sauvegardes_fonctions.php -text
 formulaires/restaurer.html -text
 formulaires/restaurer.php -text
 formulaires/sauvegarder.html -text
