--- a/plugin.xml
+++ b/plugin.xml
@@ -3,10 +3,11 @@
 	<auteur>Collectif SPIP</auteur>
 	<icon>prive/themes/spip/images/dump-32.png</icon>
 	<licence>GPL</licence>
-	<version>1.4.1</version>
+	<version>1.4.2</version>
 	<etat>stable</etat>
 	<description>Sauvegarde de la base en SQLite et restauration</description>
 	<prefix>dump</prefix>
+	<categorie>maintenance</categorie>
 	
 	<bouton id='sauvegarder' parent='bando_administration' position='1'>
 		<icone>images/base-backup-16.png</icone>
@@ -19,5 +20,6 @@
 		<url>restaurer</url>
 	</bouton>
 
+	<traduire module="dump" reference="fr" gestionnaire="salvatore" />
 	<necessite id="SPIP" version="[2.3.0-dev;)" />
 </plugin>
