--- a/.gitattributes
+++ b/.gitattributes
@@ -11,7 +11,61 @@ formulaires/sauvegarder.html -text
 formulaires/sauvegarder.php -text
 inc/dump.php -text
 inc/sauvegarder.php -text
+lang/dump_ar.php -text
+lang/dump_ast.php -text
+lang/dump_ay.php -text
+lang/dump_bg.php -text
+lang/dump_br.php -text
+lang/dump_bs.php -text
+lang/dump_ca.php -text
+lang/dump_co.php -text
+lang/dump_cpf.php -text
+lang/dump_cpf_hat.php -text
+lang/dump_cs.php -text
+lang/dump_da.php -text
+lang/dump_de.php -text
+lang/dump_en.php -text
+lang/dump_en_hx.php -text
+lang/dump_eo.php -text
+lang/dump_es.php -text
+lang/dump_eu.php -text
+lang/dump_fa.php -text
+lang/dump_fi.php -text
+lang/dump_fon.php -text
+lang/dump_fr[!!-~]2.php -text
 lang/dump_fr.php -text
+lang/dump_fr_tu.php -text
+lang/dump_gl.php -text
+lang/dump_hu.php -text
+lang/dump_id.php -text
+lang/dump_is.php -text
+lang/dump_it.php -text
+lang/dump_it_fem.php -text
+lang/dump_ja.php -text
+lang/dump_km.php -text
+lang/dump_lb.php -text
+lang/dump_my.php -text
+lang/dump_nb.php -text
+lang/dump_nl.php -text
+lang/dump_no.php -text
+lang/dump_oc_auv.php -text
+lang/dump_oc_gsc.php -text
+lang/dump_oc_lms.php -text
+lang/dump_oc_lnc.php -text
+lang/dump_oc_ni.php -text
+lang/dump_oc_ni_la.php -text
+lang/dump_oc_prv.php -text
+lang/dump_oc_va.php -text
+lang/dump_pl.php -text
+lang/dump_pt.php -text
+lang/dump_pt_br.php -text
+lang/dump_ro.php -text
+lang/dump_ru.php -text
+lang/dump_sk.php -text
+lang/dump_sv.php -text
+lang/dump_tr.php -text
+lang/dump_vi.php -text
+lang/dump_zh.php -text
 /plugin.xml -text
 prive/squelettes/contenu/restaurer.html -text
 prive/squelettes/contenu/restaurer_fonctions.php -text
