--- a/.gitattributes
+++ b/.gitattributes
@@ -70,6 +70,7 @@ lang/dump_zh.php -text
 lang/paquet-dump.xml -text
 lang/paquet-dump_ar.php -text
 lang/paquet-dump_en.php -text
+lang/paquet-dump_it.php -text
 lang/paquet-dump_sk.php -text
 prive/squelettes/contenu/restaurer.html -text
 prive/squelettes/contenu/restaurer_fonctions.php -text
