--- a/.gitattributes
+++ b/.gitattributes
@@ -70,6 +70,7 @@ lang/dump_zh.php -text
 lang/paquet-dump.xml -text
 lang/paquet-dump_ar.php -text
 lang/paquet-dump_en.php -text
+lang/paquet-dump_fa.php -text
 lang/paquet-dump_it.php -text
 lang/paquet-dump_ru.php -text
 lang/paquet-dump_sk.php -text
