il manquait un exec pour que la reprise de restauration fonctionne apres un delogeage en cours d'operation

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,7 @@ action/sauvegarder.php -text
 action/telecharger_dump.php -text
 base/restaurer.php -text
 connect/dump.php -text
+exec/base_restaurer.php -text
 formulaires/inc-lister-sauvegardes.html -text
 formulaires/inc-lister-sauvegardes_fonctions.php -text
 formulaires/restaurer.html -text
