--- a/.gitattributes
+++ b/.gitattributes
@@ -76,6 +76,7 @@ lang/paquet-dump_es.php -text
 lang/paquet-dump_fa.php -text
 lang/paquet-dump_it.php -text
 lang/paquet-dump_lb.php -text
+lang/paquet-dump_nl.php -text
 lang/paquet-dump_pt_br.php -text
 lang/paquet-dump_ru.php -text
 lang/paquet-dump_sk.php -text
