--- a/.gitattributes
+++ b/.gitattributes
@@ -72,9 +72,12 @@ lang/paquet-dump.xml -text
 lang/paquet-dump_ar.php -text
 lang/paquet-dump_de.php -text
 lang/paquet-dump_en.php -text
+lang/paquet-dump_eo.php -text
 lang/paquet-dump_es.php -text
 lang/paquet-dump_fa.php -text
 lang/paquet-dump_it.php -text
+lang/paquet-dump_lb.php -text
+lang/paquet-dump_nl.php -text
 lang/paquet-dump_pt_br.php -text
 lang/paquet-dump_ru.php -text
 lang/paquet-dump_sk.php -text
