langues (paquet-dump)

--- a/.gitattributes
+++ b/.gitattributes
@@ -78,6 +78,7 @@ lang/paquet-dump_fa.php -text
 lang/paquet-dump_it.php -text
 lang/paquet-dump_lb.php -text
 lang/paquet-dump_nl.php -text
+lang/paquet-dump_pt.php -text
 lang/paquet-dump_pt_br.php -text
 lang/paquet-dump_ru.php -text
 lang/paquet-dump_sk.php -text
