--- a/.gitattributes
+++ b/.gitattributes
@@ -36,6 +36,7 @@ lang/dump_fa.php -text
 lang/dump_fi.php -text
 lang/dump_fon.php -text
 lang/dump_fr.php -text
+lang/dump_fr_fem.php -text
 lang/dump_fr_tu.php -text
 lang/dump_gl.php -text
 lang/dump_hu.php -text
