--- a/.gitattributes
+++ b/.gitattributes
@@ -36,6 +36,7 @@ lang/dump_fa.php -text
 lang/dump_fi.php -text
 lang/dump_fon.php -text
 lang/dump_fr.php -text
+lang/dump_fr_fem.php -text
 lang/dump_fr_tu.php -text
 lang/dump_gl.php -text
 lang/dump_hu.php -text
@@ -75,9 +76,11 @@ lang/paquet-dump_en.php -text
 lang/paquet-dump_eo.php -text
 lang/paquet-dump_es.php -text
 lang/paquet-dump_fa.php -text
+lang/paquet-dump_fr_fem.php -text
 lang/paquet-dump_it.php -text
 lang/paquet-dump_lb.php -text
 lang/paquet-dump_nl.php -text
+lang/paquet-dump_pt.php -text
 lang/paquet-dump_pt_br.php -text
 lang/paquet-dump_ru.php -text
 lang/paquet-dump_sk.php -text
