--- a/.gitattributes
+++ b/.gitattributes
@@ -77,6 +77,7 @@ lang/paquet-dump_eo.php -text
 lang/paquet-dump_es.php -text
 lang/paquet-dump_fa.php -text
 lang/paquet-dump_fr_fem.php -text
+lang/paquet-dump_fr_tu.php -text
 lang/paquet-dump_it.php -text
 lang/paquet-dump_lb.php -text
 lang/paquet-dump_nl.php -text
