--- a/.gitattributes
+++ b/.gitattributes
@@ -58,6 +58,7 @@ lang/dump_oc_lms.php -text
 lang/dump_oc_lnc.php -text
 lang/dump_oc_ni.php -text
 lang/dump_oc_ni_la.php -text
+lang/dump_oc_ni_mis.php -text
 lang/dump_oc_prv.php -text
 lang/dump_oc_va.php -text
 lang/dump_pl.php -text
