[Salvatore] [source:_core_/plugins/dump/lang/ paquet-dump] Export depuis http://trad.spip.net de la langue oc_ni_mis

--- a/.gitattributes
+++ b/.gitattributes
@@ -83,6 +83,7 @@ lang/paquet-dump_fr_tu.php -text
 lang/paquet-dump_it.php -text
 lang/paquet-dump_lb.php -text
 lang/paquet-dump_nl.php -text
+lang/paquet-dump_oc_ni_mis.php -text
 lang/paquet-dump_pt.php -text
 lang/paquet-dump_pt_br.php -text
 lang/paquet-dump_ru.php -text
