--- a/.gitattributes
+++ b/.gitattributes
@@ -57,6 +57,7 @@ lang/dump_oc_lms.php -text
 lang/dump_oc_lnc.php -text
 lang/dump_oc_ni.php -text
 lang/dump_oc_ni_la.php -text
+lang/dump_oc_ni_mis.php -text
 lang/dump_oc_prv.php -text
 lang/dump_oc_va.php -text
 lang/dump_pl.php -text
@@ -77,9 +78,11 @@ lang/paquet-dump_eo.php -text
 lang/paquet-dump_es.php -text
 lang/paquet-dump_fa.php -text
 lang/paquet-dump_fr_fem.php -text
+lang/paquet-dump_fr_tu.php -text
 lang/paquet-dump_it.php -text
 lang/paquet-dump_lb.php -text
 lang/paquet-dump_nl.php -text
+lang/paquet-dump_oc_ni_mis.php -text
 lang/paquet-dump_pt.php -text
 lang/paquet-dump_pt_br.php -text
 lang/paquet-dump_ru.php -text
