--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,7 @@ action/supprimer_dump.php -text
 action/telecharger_dump.php -text
 base/restaurer.php -text
 connect/dump.php -text
+/dump_autoriser.php -text
 exec/base_restaurer.php -text
 formulaires/inc-lister-sauvegardes.html -text
 formulaires/inc-lister-sauvegardes_fonctions.php -text
