--- a/.gitattributes
+++ b/.gitattributes
@@ -73,6 +73,7 @@ lang/dump_vi.php -text
 lang/dump_zh.php -text
 lang/paquet-dump.xml -text
 lang/paquet-dump_ar.php -text
+lang/paquet-dump_br.php -text
 lang/paquet-dump_de.php -text
 lang/paquet-dump_en.php -text
 lang/paquet-dump_eo.php -text
