[Salvatore] [source:_core_/plugins/dump/lang/ paquet-dump] Export depuis http://trad.spip.net de la langue ja

--- a/.gitattributes
+++ b/.gitattributes
@@ -82,6 +82,7 @@ lang/paquet-dump_fa.php -text
 lang/paquet-dump_fr_fem.php -text
 lang/paquet-dump_fr_tu.php -text
 lang/paquet-dump_it.php -text
+lang/paquet-dump_ja.php -text
 lang/paquet-dump_lb.php -text
 lang/paquet-dump_nl.php -text
 lang/paquet-dump_oc_ni_mis.php -text
