--- a/.gitattributes
+++ b/.gitattributes
@@ -81,6 +81,7 @@ lang/paquet-dump_es.php -text
 lang/paquet-dump_fa.php -text
 lang/paquet-dump_fr_fem.php -text
 lang/paquet-dump_fr_tu.php -text
+lang/paquet-dump_hac.php -text
 lang/paquet-dump_it.php -text
 lang/paquet-dump_ja.php -text
 lang/paquet-dump_lb.php -text
